# FIfa_stadium_manager

./: README.md  accessibility_audit_report.md  ai_system_architecture.md  deploy.md  docker-compose.ec2.yml  panel_expert_critique.md  performance_optimization_report.md  security_audit_report.md  stadium_os_architecture.md  walkthrough.md
apps/backend-gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
apps/backend-gateway/alembic/: env.py
apps/backend-gateway/alembic/versions/: __init__.py
apps/backend-gateway/prisma/: schema.prisma
apps/backend-gateway/prisma/migrations/20260717205716_init/: migration.sql
apps/backend-gateway/src/: __init__.py  config.py  config.ts  main.py  server.ts
apps/backend-gateway/src/application/: README.md  __init__.py
apps/backend-gateway/src/application/ports/: __init__.py  gateRepository.ts  gate_repository.py  incidentRepository.ts  incident_repository.py  stadiumRepository.ts  stadium_repository.py  userRepository.ts  user_repository.py  volunteerRepository.ts  volunteer_repository.py
apps/backend-gateway/src/application/schemas/: __init__.py  agent_schemas.py  authSchemas.ts  auth_schemas.py  crowd_schemas.py  gateSchemas.ts  gate_schemas.py  incidentSchemas.ts  incident_schemas.py  stadiumSchemas.ts  stadium_schemas.py  volunteerSchemas.ts  volunteer_schemas.py
apps/backend-gateway/src/domain/: README.md  __init__.py  enums.py  enums.ts  exceptions.py  exceptions.ts  valueObjects.ts  value_objects.py
apps/backend-gateway/src/infrastructure/: README.md  __init__.py
apps/backend-gateway/src/interfaces/: README.md  __init__.py
apps/backend-gateway/tests/: __init__.py  auth.spec.ts  conftest.py  gates.spec.ts  incidents.spec.ts  setup.ts  test_agents.py  test_auth.py  test_crowd.py  test_gates.py  test_health.py  test_incidents.py  test_stadiums.py  test_volunteers.py
(+168 files in other folders)
