[project]
name = "stadiumos-backend-gateway"
version = "1.0.0"
description = "StadiumOS AI — FastAPI Backend Gateway for FIFA World Cup 2026 Stadium Operations"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "StadiumOS Team" }]

dependencies = [
    # --- Web Framework ---
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # --- Database & ORM ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # --- Cache ---
    "redis[hiredis]>=5.2.0",

    # --- Validation & Settings ---
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # --- Authentication & Security ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",

    # --- Structured Logging ---
    "structlog>=24.4.0",

    # --- Rate Limiting ---
    "slowapi>=0.1.9",

    # --- Utilities ---
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests with no external dependencies",
    "integration: Integration tests requiring database/redis",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
